estilos realizados a un 80%

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css//styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
 
   <title>Order summary card</title>
 
@@ -17,7 +20,7 @@
 </head>
 
 <body>
-  <article>
+  <article class="payment-card">
     <header>
       <img src="./images/illustration-hero.svg" alt="Hero de niña escuchando música">
     </header>
@@ -36,11 +39,12 @@
           <a href="/">Change</a>
         </div>
       </section>
+    </main>
       <section>
         <button>Proceed to Payment</button>
         <button>Cancel Order</button>
       </section>
-    </main>
+  
   </article>
 </body>
 
