--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div>
           <img src="./images/icon-music.svg" alt="">
         </div>
-        <div>
+        <div class="plan__type-plan">
           <span>Annual Plan</span>
           <span>$59.99/year</span>
         </div>
@@ -40,9 +40,9 @@
         </div>
       </section>
     </main>
-      <section>
-        <button>Proceed to Payment</button>
-        <button>Cancel Order</button>
+      <section class="button-container">
+        <button class="button-container__payment">Proceed to Payment</button>
+        <button class="button-container__cancel">Cancel Order</button>
       </section>
   
   </article>
